<resources>
    <string name="app_name">Stock Watch</string>
    <string name="icon_name">Stocks</string>
    <string name="hockeyAppID">7a66f7ec251949d88f47aaa4931f20cc</string>
    <string name="search_menuItemTitle">Search</string>
    <string name="ticker_menuItemTitle">Ticker</string>
    <string name="ticker_asc_menuItemTitle">Ticker \u2191</string>
    <string name="ticker_desc_menuItemTitle">Ticker \u2193</string>
    <string name="price_menuItemTitle">Price</string>
    <string name="price_asc_menuItemTitle">Price \u2191</string>
    <string name="price_desc_menuItemTitle">Price \u2193</string>
    <string name="changePercent_menuItemTitle">% Change</string>
    <string name="changePercent_asc_menuItemTitle">% Change \u2191</string>
    <string name="changePercent_desc_menuItemTitle">% Change \u2193</string>
    <string name="star_menuItemTitle">Star</string>
    <string name="overview">Overview</string>
    <string name="news">News</string>
    <string name="today">Today</string>
    <string name="premarket">Pre-Market</string>
    <string name="atClose">At Close</string>
    <string name="afterHours">After-Hours</string>
    <string name="pastTwoWeeks">Past 2W</string>
    <string name="pastMonth">Past Month</string>
    <string name="pastThreeMonths">Past 3M</string>
    <string name="pastYear">Past Year</string>
    <string name="pastFiveYears">Past 5Y</string>
    <string name="keyStatistics">Key Statistics</string>
    <string name="price">Price</string>
    <string name="state">State</string>
    <string name="todaysLow">Today\'s Low</string>
    <string name="todaysHigh">Today\'s High</string>
    <string name="fiftyTwoWeekLow">52 Week Low</string>
    <string name="fiftyTwoWeekHigh">52 Week High</string>
    <string name="marketCap">Market Cap</string>
    <string name="prevClose">Prev Close</string>
    <string name="open">Open</string>
    <string name="peRatio">P/E Ratio</string>
    <string name="eps">EPS</string>
    <string name="yield">Yield</string>
    <string name="volume">Volume</string>
    <string name="avgVolume">65 Day Avg Vol</string>
    <string name="na">N/A</string>
    <string name="x">x</string>
    <string name="tab_hyphen">\t-</string>
    <string name="loading_description_ellipsis">Loading description\u2026</string>
    <string name="chartsUnavailable">Charts unavailable</string>
    <string name="descriptionNotFound">Description not found</string>
    <string name="noNewsArticlesFound">No news articles found</string>
    <string name="ioException_loadingCharts">Cannot load charts.\nCheck your internet connection and retry.</string>
    <string name="ioException_loadingNews">Cannot load news articles.\nCheck your internet connection and retry.</string>
    <string name="ioException_loadingDescription">Cannot load description.\nCheck your internet connection and retry.</string>
    <string name="openInBrowser">Open in Browser</string>
    <string name="copyLink">Copy Link</string>
    <string name="shareLink">Share Link</string>
    <string-array name="chartPeriods">
        <item>1D</item>
        <item>2W</item>
        <item>1M</item>
        <item>3M</item>
        <item>1Y</item>
        <item>5Y</item>
    </string-array>
    <string name="string">%1$s</string>
    <string name="double2dec">%1$.2f</string>
    <string name="double2dec_percent">%1$.2f%%</string>
    <string name="plus_double2dec">+%1$.2f</string>
    <string name="string_colon_string">%1$s: %2$s</string>
    <string name="int_colon_int2dig_am_ET">%1$d:%2$02dam ET</string>
    <string name="int_colon_int2dig_pm_ET">%1$d:%2$02dpm ET</string>
    <string name="openParen_double2dec_percent_closeParen">(%1$.2f%%)</string>
    <string name="openParen_plus_double2dec_percent_closeParen">(+%1$.2f%%)</string>
    <string name="string_colon_double2dec">%1$s: %2$.2f</string>
    <string name="string_colon_double2dec_percent">%1$s: %2$.2f%%</string>
</resources>