<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItem_search"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_menuItemTitle"
        app:actionViewClass="android.widget.SearchView"
        app:queryHint="Ticker"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuItem_sortAlphabetically"
        android:title="@string/ticker_menuItemTitle"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menuItem_sortByPrice"
        android:title="@string/price_menuItemTitle"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menuItem_sortByChangePercent"
        android:title="@string/changePercent_menuItemTitle"
        app:showAsAction="collapseActionView" />

</menu>